# llm-zoomcamp-ycc-2026

./: .gitignore  README.md  main.py  pyproject.toml
1-introduction-to-rag/: 00-notebook.ipynb  01-rag_ingest.ipynb  02-rag_cleaned.ipynb  03-sqlite_ingest.ipynb  04-persistent_rag.ipynb  05-agent.ipynb  rag_cleaned.ipynb
2-vector-search/: vector_search.ipynb
4-evaluation/: 01-data-gen.ipynb  02-search-evaluation.ipynb  03-rag-evals.ipynb  04-llm-judge.ipynb  05-agent-eval.ipynb  evaluation_utils.py
4-evaluation/data/: agent-answers.csv  agent-evaluations.csv  ground_truth-new.csv  rag-answers-new.csv  rag-evaluations-new.csv
5-monitoring/: Makefile  app.py  assistant.py  dashboard.py  db_init.py  db_query.py  generate_data.py  metrics.py
