[project]
name = "llm-zoomcamp-ycc-2026"
version = "0.1.0"
description = "LLM zoomcamp course 2026 DatatalksClub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.1.1",
    "nest-asyncio>=1.6.0",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pydantic-ai>=2.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.1",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]
